apps/base/paperless-ngx/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: paperless-ngx
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
