apps/base/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: paperless.kubetest.uk
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: paperless.kubetest.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
